@@ -150,6 +150,23 @@ identifiers in upper case.  In this instance, you should specify the attribute
         <p>The default is <i>true</i>.</p></td>
   </tr>
   <tr>
+    <td valign="top">enableCountByExample</td>
+    <td>Signifies whether a count by example statement should be generated.
+        This statement will return the number of rows in a table that match
+        an example.
+        <p>The default is <i>true</i>.</p></td>
+  </tr>
+  <tr>
+    <td valign="top">enableUpdateByExample</td>
+    <td>Signifies whether an update by example statement should be generated.
+        This statement will update rows in a table that match
+        an example.  This method is not available in the legacy generator set.
+        If true, an update by example "selective" statement will also be generated.
+        The "selective" statement will only update columns where the corresponding
+        value in the record parameter is non-null.
+        <p>The default is <i>true</i>.</p></td>
+  </tr>
+  <tr>
     <td valign="top">selectByPrimaryKeyQueryId</td>
     <td>This value will be added to the select list of the select by primary key statement
         in this form: "'&lt;value&gt;' as QUERYID".
@@ -164,13 +181,6 @@ identifiers in upper case.  In this instance, you should specify the attribute
         This can be useful for identifying queries in DBA tracing tools at run time.
         If you use thus value, you should specify a unique id for every different query
         generated by Abator.</td>
-  </tr>
-  <tr>
-    <td valign="top">enableCountByExample</td>
-    <td>Signifies whether a count by example statement should be generated.
-        This statement will return the number of rows in a table that match
-        an example.
-        <p>The default is <i>true</i>.</p></td>
   </tr>
   <tr>
     <td valign="top">modelType</td>
